# Dedale

./: .gitlab-ci.yml  README.md  docker-compose.yml  eas.json  start-dedale.ps1  start-dedale.sh
Annexes/hooks/: commit-msg  prepare-commit-msg
Backend/: Dockerfile
Backend/api/: .env.sample  package-lock.json
Backend/api/prisma/: schema.prisma
Frontend/Mobile/: .gitlab-ci.yml
Frontend/Mobile/Dedale/: .env.example  .gitignore  App.tsx  README.md  app.json  babel.config.js  eas.json  eslint.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  test-report.md  tile-server.js  tsconfig.json
Frontend/Mobile/Dedale/android/: settings.gradle
Frontend/Mobile/Dedale/android/app/: build.gradle
Frontend/Mobile/Dedale/assets/migrations/: index.ts  migrationRunner.ts  migrations.tsx  seeders.ts
Frontend/Mobile/Dedale/coverage/: clover.xml  coverage-final.json  lcov.info
Frontend/Mobile/Dedale/coverage/lcov-report/: index.html
Frontend/Mobile/Dedale/src/components/: CoordinatesDisplay.tsx  CustomButton.tsx  EditModal.tsx  EventItem.tsx  Map.tsx  ObstacleSelector.tsx  OfflineMap.tsx  PointCard.tsx  QrCodeSacnner.tsx  QrCodeScanner.tsx  QrCodeScannerPlanning.ts  QrCodeScannerPlanning.tsx  WebSocketClient.tsx
Frontend/Mobile/Dedale/src/constants/: colors.ts
Frontend/Mobile/Dedale/src/context/: EventContext.tsx  GeometriesContext.tsx  PointsContext.tsx  WebSocketContext.tsx
Frontend/Mobile/Dedale/src/screens/: ConnectEvent.tsx  CreateRoute.tsx  Home.tsx  InterestPoints.tsx  Planning.tsx  PointDetails.tsx  PointGuidance.tsx  RegisterPoint.tsx  RouteNavigation.tsx  SelectGuidancePoints.tsx  SelectPointGuidance.tsx  Settings.tsx  TeamDetails.tsx  TeamGuidance.tsx
Frontend/Mobile/Dedale/src/services/: Helper.ts  ImageHelper.test.ts  ImageHelper.ts  databaseAcces.ts
Frontend/Mobile/Dedale/src/style/: global.css
Frontend/Mobile/Dedale/src/types/: database.ts  navigation.ts  planning.ts
Frontend/Web/.react-router/types/: +routes.ts
Frontend/Web/Dedale/: .gitignore  .gitlab-ci.yml  Dockerfile  PLAN_DE_TESTS.md  eslint.config.js  generate-test-report.sh  index.html  package-lock.json  package.json  test-output.txt  tsconfig.json  vite.config.ts  vitest.config.test.ts  vitest.config.ts
Frontend/Web/Dedale/coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-10.json  coverage-11.json  coverage-12.json  coverage-13.json  coverage-14.json  coverage-15.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json  (+3 more)
Frontend/Web/Dedale/src/: App.tsx  index.css  main.tsx
Frontend/Web/Dedale/src-tauri/: 2  Cargo.toml  EXCEL_EXPORT_FIX.md  points.xlsx  tauri.conf.json
Frontend/Web/Dedale/src-tauri/capabilities/: default.json
Frontend/Web/Dedale/src-tauri/scripts/: download_ban.py
Frontend/Web/Dedale/src-tauri/src/: db.rs  excel.rs  geocoding.rs  lib.rs  main.rs  map.rs  map_pdf.rs  map_static.rs  pdf.rs  pmtiles.rs  seed.rs  socket.rs  temp..rs  test.html  types.rs  utils.rs
Frontend/Web/Dedale/src-tauri/src-tauri/: points.xlsx
Frontend/Web/Dedale/src-tauri/src/db/: equipements.rs  events.rs  geos.rs  mod.rs  persons.rs  planning.rs  points.rs  teams.rs  types.rs
Frontend/Web/Dedale/src-tauri/src/tests/: db_test.rs  excel_test.rs  map_test.rs  mod.rs  pdf_test.rs  socket_test.rs  utils_test.rs
Frontend/Web/Dedale/src-tauri/webdriver/webdriverio/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
Frontend/Web/Dedale/src-tauri/webdriver/webdriverio/test/specs/: app.spec.ts
Frontend/web/: .gitignore  Dockerfile.prod  package-lock.json  package.json  react-router.config.ts  tsconfig.json
Frontend/web/app/: app.css  root.tsx  routes.ts
Frontend/web/app/routes/: accueil.tsx  carte.tsx  equipes.tsx  login.tsx  planning.tsx
T6_rapport/: .gitlab-ci.yml  mkdocs.yml
T6_rapport/docs/: FAQ.md  Rapport2.md  features_list.md  index.md
T6_rapport/docs/E2E/: execution_desktop_plan.md  execution_mobile_plan.md
T6_rapport/docs/bug_reports/: BUG-desktop-001.md  BUG-desktop-002.md  BUG-desktop-003.md
T6_rapport/docs/css/: custom.css
report-www/: index.html  markdown-loader.js  styles.css  toc.js
report-www/src/: index.md
reports/: fiches-tests-desktop.md  fiches-tests-mobile.md  security.md  tests.md
(+135 files in other folders)
