[package]
name = "dedale"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dedale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
tauri = { version = "2.9.3", features = [] }
genpdf = { version = "0.2.0", features = ["images"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-http = "2.5.4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-fs = "2"
rust_xlsxwriter = "0.92.2"
dirs = "6.0.0"
rand = "0.9.2"
image = "0.23"
qrcode = { version = "0.12", default-features = false, features = ["image"] }
local-ip-address = "0.6.5"
tungstenite = "0.28.0"
base64 = "0.22.1"
rfd = "0.16.0"
